--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <div id="page-wrapper">
+		
+		
 	<div class="flex-FirstPage">
 		<header id="header">
 	
@@ -26,7 +28,7 @@
 		</header>
 
 			<div class="hero-text">
-				<H1>Everything you need to Climb</H1>
+				<H1 id="mainHeader">Everything you need to Climb</H1>
 	  				<form>
     					<input  id="emailForm" name="email" id="email" type="email" placeholder="Enter your email address" required/>
     					<input id="submit" type="submit" value="Get Started" class="btn"></input>
