--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 			
 			<div class="box-flex">
 				
-					<div id="appClick">
+					<div class="box" id="appClick">
 						<a  id="boxHref" href="#">
 					<p id="labelP">Apparel</p>
 					<i class="fas fa-socks"></i>
 
 				</a></div>
 				
-				<div id="appClick"><a id="boxHref" href="#">
+				<div class="box" id="appClick"><a id="boxHref" href="#">
 					<p>Gear</p>
 					<i class="fas fa-dumbbell"></i></a>
 
 				</div>
-				<div id="appClick"><a id="boxHref" href="#">
+				<div class="box" id="appClick"><a id="boxHref" href="#">
 					<p>Experiences</p>
 				<i class="fas fa-globe-americas"></i></a>
 			</div>
